--- a/turtle_control/package.xml
+++ b/turtle_control/package.xml
@@ -14,6 +14,7 @@
 
   <exec_depend>rclpy</exec_depend>
   <exec_depend>turtlesim</exec_depend>
+  <exec_depend>turtle_interfaces</exec_depend>
 
   <export>
     <build_type>ament_python</build_type>
