--- a/turtle_interfaces/CMakeLists.txt
+++ b/turtle_interfaces/CMakeLists.txt
@@ -10,6 +10,15 @@ find_package(ament_cmake REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
+
+find_package(turtlesim REQUIRED)
+
+rosidl_generate_interfaces(${PROJECT_NAME}
+  "srv/Waypoints.srv"
+  DEPENDENCIES
+  turtlesim
+  )
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
