--- a/turtle_control/config/colors.yaml
+++ b/turtle_control/config/colors.yaml
@@ -1,5 +1,5 @@
-/turtlesim:    
+/roving_turtle:    
   ros__parameters:
-     background_b: 255
+    background_b: 255
     background_g: 225
     background_r: 202
